--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,12 +12,11 @@ jobs:
     strategy:
       matrix:
         features: [
-           "color",
-           "hello"
+           "caddy"
         ]
         baseImage:
           [
-            "mcr.microsoft.com/devcontainers/base:ubuntu"
+            "mcr.microsoft.com/devcontainers/base:debian"
           ]
     steps:
       - uses: actions/checkout@v2
